--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>My shaandaar todolist</title>
+        <title>Vinay shaandaar todolist</title>
         <style>
             a {
                 text-decoration: none;
@@ -14,7 +14,7 @@
     </head>
 
     <body>
-        <h1>Hello Everyone,,, BATCH 3 is just Amazing & Awesome</h1>
+        <h1>Hello Everyone,,, BATCH 3 & Vinay is just Amazing & Awesome</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
